# pdvconsole

./: Makefile  README.md  noxfile.py  pyproject.toml
requirements/: requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
src/pdvconsole/: kbhit.py  vconsole.py
tests/: generate_incidents.py  test_mock.py
